language/move-lang/tests/move_check/parser/struct_native_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_missing_semicolon.move:3:1
  │
3 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'

